@@ -1,7 +1,12 @@
+2005-01-07 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+   * src/gdcmDocEntry.[h|cxx] : now the ReadLength is the length of the datas
+     to read in the file... and only it ! Length is the efective length of the
+     datas in the DocEntry structure
+
 2005-01-07 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
-   * Change the gdcmDebug approach. Remov the global static debug 'dbg'. 
+   * Change the gdcmDebug approach. Remov the global static debug 'dbg'.
      And now use a static function call instead, with a global variable. i
-     This is much closer to the VTK approach. Hopefully should be bulletproof 
+     This is much closer to the VTK approach. Hopefully should be bulletproof
      and easier to use...hopefully
 
 2005-01-06 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
